[metadata]
name = bsdefence
version = 1.0
description = A Python Tower Defence Game - Built by Blane Steckline
long_description = A Python tower defence game built by Blane Steckline, I think its pretty cool. 
license = BS Studios
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
install_requires =
    click==8.*
    pygame==2.*
    structlog

[options.package_data]
tower.assets.gfx = *.png
tower.assets.audio = *.wav, *.ogg
tower.assets.levels = *.json

[options.entry_points]
# Optional, but if you want to keep it,
# make sure you have a function called
# main() in tower.main!
console_scripts =
    tower = tower.main:main